# 2DSurvival

./: .gitignore  .gitmodules  CMakeLists.txt
Entities/: Entity.cpp  Entity.h
States/: GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  State.cpp  State.h
cfg/: gamestate_keybinds.ini  window.ini
doc/: Readme.md
libs/noise/: SimplexNoise.cpp
libs/threadpool/: thread_pool.h
resources/Pictures/TileSheets/: 64px_TerrainSprite.aseprite  TerrainSprite.aseprite
shaders/: fragment_shader.frag  vertex_shader.vert
src/: AnimationComponent.cpp  Button.cpp  Button.h  Collision.cpp  Entity.cpp  Game.cpp  Game.h  GameState.cpp  HitboxComponent.cpp  MainMenuState.cpp  MovementComponent.cpp  NetworkComponent.cpp  PauseMenu.cpp  Player.cpp  SimplexNoise.cpp  State.cpp  Tile.cpp  TileMap.cpp  main.cpp
src/include/: AnimationComponent.h  Button.h  Collision.h  Entity.h  Game.h  GameState.h  HitboxComponent.h  MainMenuState.h  MovementComponent.h  NetworkComponent.h  PauseMenu.h  Player.h  State.h  Tile.h  TileMap.h
