cmake_minimum_required(VERSION 3.17)
project(2DSurvival)
set(CMAKE_CXX_STANDARD 20)
add_executable(2DSurvival src/main.cpp src/Game.cpp src/include/Game.h src/State.cpp src/include/State.h src/GameState.cpp src/include/GameState.h src/Entity.cpp src/include/Entity.h src/MainMenuState.cpp src/include/MainMenuState.h src/Button.cpp src/include/Button.h)
include_directories(/usr/local/include)
find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
include_directories(${SFML_INCLUDE_DIRS})
target_link_libraries(2DSurvival sfml-system sfml-window sfml-graphics sfml-audio sfml-network)